Closed Bug 1199522 Opened 8 years ago Closed 8 years ago

Apply :fullscreen to all elements in the fullscreen element stack instead of only the topmost one

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

(Blocks 1 open bug)

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

In our current implementation, :fulscreen (:-moz-full-screen for us) only applies to the topmost element in the fullscreen element stack. The spec has recently changed to apply that selector on all of the elements in that stack.

This is a breaking change to the spec [1], and we decided that this change is acceptable because this behavior seems to be more sensible, and Microsoft has shipped this behavior since IE11, and unprefixed it in Edge with the same behavior, which indicates not too many authors rely on the old spec behavior.

[1] https://github.com/whatwg/fullscreen/issues/18#issuecomment-134781334
Bug 1199522 - Apply :fullscreen pseudo-class to all elements in the fullscreen element stack.
Attachment #8653915 - Flags: review?(bugs)
Attachment #8653915 - Flags: review?(bugs) → review+
Keywords: dev-doc-needed
https://hg.mozilla.org/mozilla-central/rev/c17237b5a6a6
Assignee: nobody → quanxunzhen
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.