Bug 1199522 - Apply :fullscreen pseudo-class to all elements in the fullscreen element stack. r=smaug