dom/events/EventStateManager.cpp
@@ -4689,6 +4689,10 @@ EventStateManager::SetFullScreenState(Element* aElement, bool aIsFullScreen)
   Element* ancestor = aElement;
   while ((ancestor = GetParentElement(ancestor))) {
     DoStateChange(ancestor, NS_EVENT_STATE_FULL_SCREEN_ANCESTOR, aIsFullScreen);
+    if (ancestor->State().HasState(NS_EVENT_STATE_FULL_SCREEN)) {
+      // If we meet another fullscreen element, stop here.
+      break;
+    }
   }
 }
 
